Tue Jul 13 15:11:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/PSAT/PSAT_Connector.idl:
          Removed include which we don't need anymore now the behaviour of -SS
          on tao_idl doesn't break the include chain anymore

Tue Jul 13 14:52:59 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/GetComp/Sender/GetComp_Sender_exec.cpp:
        Small changes in test criteria.

Tue Jul 13 10:30:59 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_XMI/be_util.cpp:
        * tools/IDL3_to_XMI/be_util.h:

          New files containing a utility class
          with static methods.

        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:

          Added new files to the project.

        * tools/IDL3_to_XMI/be_global.cpp:
        * tools/IDL3_to_XMI/be_global.h:

          Factored out methods unrelated to global
          data storage and moved them to the new
          utility class.

Mon Jul 12 22:52:21 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/IDL3_to_XMI/IDL3_to_XMI_visitor.cpp:

          Updated to match new XML_Helper interface.

Mon Jul 12 15:04:06 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Log_Macros.h:
          Code layout.

        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component.idl:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component_exec.h:
        * connectors/dds4ccm/tests/NonChangeableAttribute/Component/NonChangeable_Component_exec.cpp:
        * connectors/dds4ccm/tests/NonChangeableAttribute/descriptors/Plan.cdp:
          Added filter test.

Mon Jul 12 13:07:57 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/XML_File_Intf.cpp:
        * DAnCE/Config_Handlers/XML_Typedefs.h:
        * DAnCE/Config_Handlers/XML_Typedefs.cpp:
        * tools/XML/XML_Helper.h: