@@ -1,3 +1,14 @@
+Tue Jul 13 19:38:35 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp:
+
+         Possible fix for compile error on scoreboard.
+
+        * tools/XML/XML_Helper.tpp:
+
+          Possible fix for segfault on scoreboard, as I can't reproduce in my
+          workspace.
+
 Tue Jul 13 15:11:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/PSAT/PSAT_Connector.idl:
